--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-./myNotes_rnn/keras_models/20_newsgroup/
-./assignment3/cs231n/datasets/
+myNotes_rnn/keras_models/20_newsgroup/
+assignment3/cs231n/datasets/
+myNotes_rnn/keras_models/glove.6B.50d.txt
