--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 myNotes_rnn/keras_models/20_newsgroup/
 assignment3/cs231n/datasets/
 myNotes_rnn/keras_models/glove.6B.50d.txt
+slides/
+assignment1/cs231n/datasets/
